# opengml

./: .dockerignore  .gitignore  .travis.yml  1  BUILD.md  CMakeLists.txt  Dockerfile  LIBRARY.md  LICENSE  QUICKSTART.md  README.md  SConstruct  SOURCE_OVERVIEW.md  TODO.md  appveyor.yml  assemble-release-win.sh  assemble-release.py  assemble-release.sh  cmake-clean.sh  embuild.sh  ogm.rc  options.sav
.devcontainer/: devcontainer.json  post-create.sh
.github/workflows/: build.yml
demo/: oporder.gml  ptest_builtin_instance.gml  ptest_builtin_instance_indirect.gml  ptest_datatypes.gml  ptest_fn_comma.gml  ptest_global.gml  ptest_instance_array.gml  ptest_instance_indirect.gml  ptest_instance_indirect_array.gml  ptest_json.gml  ptest_literal.gml  ptest_literal_array.gml  ptest_local.gml  ptest_operator.gml  ptest_redundant_semicolon.gml  ptest_rop.gml  ptest_string.gml  ptest_string_ops.gml  ptest_ternary.gml  ptest_var_comma.gml  test_buffer.gml  test_external.gml  test_gamepad.gml  test_gc.gml  test_gc_cow.gml  test_gc_remove_link.gml  test_gfx_model.gml  test_gfx_vertex.gml  test_optimization_speed.gml  test_random.gml
demo/projects/example/: credits.txt  example.project.gmx
demo/projects/example-ogm/: credits.txt  example.project.ogm
demo/scripts/: ogm_version.gml  oporder.gml  ptest.gml  ptest_arrow_loop.gml  ptest_assign.gml  ptest_broken_fn.gml  ptest_builtin_array.gml  ptest_builtin_array2.gml  ptest_builtin_instance.gml  ptest_builtin_instance_indirect.gml  ptest_ds_map.gml  ptest_ds_priority.gml  ptest_fn_comma.gml  ptest_gig.gml  ptest_global.gml  ptest_global_array.gml  ptest_global_multi.gml  ptest_globalvar.gml  ptest_if_then.gml  ptest_instance.gml  ptest_instance_array.gml  ptest_json.gml  ptest_local_array.gml  ptest_local_array_nocow.gml  ptest_md5.gml  ptest_nested_accessors.gml  ptest_nested_array_relassign.gml  ptest_nested_builtin.gml  ptest_rop.gml  ptest_string.gml  ptest_string_add.gml  ptest_string_execute.gml  ptest_string_ops.gml  test_buffer.gml  test_constructor.gml  test_constructor_static.gml  test_fn0.gml  test_fn1.gml  test_fn2.gml  test_gc.gml  (+17 more)
docker/: README.md  build.sh  copy_lib.sh  ubuntu.Dockerfile  ubuntu.build.Dockerfile  ubuntu.env.32.Dockerfile  ubuntu.env.64.Dockerfile
etc/: BUILD.md  PACKAGE_DEPENDENCIES.md  SOURCE_OVERVIEW.md  TODO.md  social.xcf
etc/meta/: assemble-release.py  check-32-bits.cpp  check-64-bits.cpp  check32-sconstruct.py  embuild.sh  generate-fn-external-call-def.py  generate-resources.sh  print-env.py
include/ogm/asset/: Asset.hpp  AssetBackground.hpp  AssetFont.hpp  AssetObject.hpp  AssetRoom.hpp  AssetScript.hpp  AssetShader.hpp  AssetSound.hpp  AssetSprite.hpp  AssetTable.hpp  Config.hpp  Event.hpp  Image.hpp  LayerCommon.hpp
include/ogm/ast/: ast_util.h  line_column.h  parse.h
include/ogm/beautify/: BAST.hpp  beautify.hpp
include/ogm/bytecode/: BytecodeTable.hpp  Library.hpp  Namespace.hpp  bytecode.hpp  stream_macro.hpp
include/ogm/collision/: QuadTree.hpp  SpatialHash.hpp  collision.hpp
include/ogm/common/: compile_time.h  error.hpp  error_codes.hpp  language.h  location.h  parallel.hpp  refstr.h  serialize.hpp  types.hpp  util.hpp  util_sys.hpp
include/ogm/geometry/: Ellipse.hpp  Triangle.hpp  Vector.hpp  aabb.hpp
include/ogm/gui/: editor.hpp
include/ogm/interpreter/: BackgroundLayer.hpp  Buffer.hpp  BufferManager.hpp  Buffers.hpp  COWGOAString.hpp  Cameras.hpp  Debugger.hpp  Executor.hpp  Filesystem.hpp  Frame.hpp  Garbage.hpp  Instance.hpp  InstanceVariables.hpp  Layer.hpp  Layers.hpp  Network.hpp  SafeVariable.hpp  SparseContiguousMap.hpp  StandardLibrary.hpp  TileLayer.hpp  Variable.hpp  Variable_impl.hpp  Variable_impl.inc  WithIterator.hpp  debug_log.hpp  execute.hpp  ivars.h  serialize.hpp
include/ogm/project/: Project.hpp  ResourceTree.hpp
include/ogm/sys/: util_sys.hpp
main/: main.cpp
src/asset/: AssetTable.cpp  Event.cpp  Image.cpp
src/ast/: COWString.hpp  Lexer.cpp  Lexer.hpp  Parser.cpp  Parser.hpp  Production.cpp  Production.hpp  Readme.md  ast_util.cpp  grammar.hpp  parse.cpp  peg.hpp
src/ast/peg/: peg.inc
src/beautify/: beautify.cpp
src/bytecode/: dis.cpp  generate.cpp  generate.hpp  lvalue.hpp  peephole.cpp
src/common/: error.cpp  sdl.hpp  util.cpp
src/common/fs/: fs_common.cpp  fs_std17.cpp  fs_unix.cpp  fs_windows.cpp
src/gig/: README.md  gig.cpp
src/gig/objects/: objGigREPL.object.gmx
src/gig/scripts/: gigFunction.gml  gigInit.gml  gigReturnValue.gml  gigStringExecute.gml  gigVariableGet.gml  gigVariableSet.gml
src/gui/: editor.cpp  editor_globals.cpp  editor_globals.hpp  editor_room.cpp  private.cpp  private.hpp  room-editor.cpp
src/interpreter/: Debugger.cpp  Filesystem.cpp  Frame.cpp  Garbage.cpp  Instance.cpp  Instance_Impl.inc  Layers.cpp  Network.cpp  StandardLibrary.cpp  Variable.cpp  cli_input.cpp  cli_input.hpp  execute.cpp  input.cpp  input.hpp
src/interpreter/async/: Async.cpp  HTTP.cpp  Network.cpp
src/interpreter/display/: DefaultFont.ttf.cpp  Display.cpp  Share.hpp  TextureStore.cpp  shader_def.cpp  shader_def.hpp
src/interpreter/sandbox/: FilesystemHook.cpp  FilesystemHook.hpp  mprotect.c  mprotect.h
src/libretro/: libretro_h_LICENSE  lr-core.cpp  lr-core.hpp  main.cpp  unzip.cpp  unzip.hpp
src/main/: main.cpp
src/project/: Builtin.cpp  Project.cpp  ProjectResources.hpp  Resource.cpp  ResourceBackground.cpp  ResourceFont.cpp  ResourceObject.cpp  ResourceRoom.cpp  ResourceScript.cpp  ResourceShader.cpp  ResourceSound.cpp  ResourceSprite.cpp  ResourceTree.cpp  XMLError.hpp  cache.cpp  cache.hpp  macro.hpp
src/project/arf/: arf_parse.cpp
src/project/imagefx/: README.md  fx.cpp  fx.hpp  shdrfx.cpp  (+3 more)
src/resources/: README.md  object_resource.png.c  object_resource.png.cpp  resources.h  resources.hpp
src/sys/: browser_html5.cpp  browser_unix.cpp  browser_windows.cpp  fs_common.cpp  fs_share.hpp  fs_std17.cpp  fs_unix.cpp  fs_windows.cpp
test/: link_test.cpp  main.cpp  tEnums.cpp
test/collision/: tGeometry.cpp
test/common/: tUtil.cpp
test/interpreter/: tDemo.cpp  tExecute.cpp  tSparseContiguousMap.cpp
(+68 files in other folders)
